force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/SPEN_OutboundDiallerConfig__mdt.object-meta.xml
<CustomObject>
    <label>Outbound Dialler Config</label>
    <pluralLabel>Outbound Dialler Configs</pluralLabel>
</CustomObject>