force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/ApplicableCalledInINCType__c.field-meta.xml
<CustomField>
    <fullName>ApplicableCalledInINCType__c</fullName>
    <description>For Orphan Call logs or Cases, which outcomes are to be considered for A3 or D3</description>
    <inlineHelpText>No Supply (Single Premise)
ENS1
No Supply (Online) SP
NSOS
No Supply (SP) auto call IVR
NOS4
No Supply (IVR) Single Premise
NOS2</inlineHelpText>
    <label>ApplicableCalledInINCType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>