force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/ApplicableINCStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicableINCStatus__c</fullName>
    <description>It will tell for which INC Status OD to be created</description>
    <label>Applicable INC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>