force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/ApplicableINCType__c.field-meta.xml
<CustomField>
    <fullName>ApplicableINCType__c</fullName>
    <description>It will have the Applicable INC type separated by ,</description>
    <label>Applicable INC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>