force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
                <default>true</default>
                <label>Stage 1</label>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
            <value>
                <fullName>Stage 4 Retry</fullName>
            </value>
            <value>
                <fullName>Stage 3 Retry</fullName>
            </value>
            <value>
                <fullName>Stage 2 Retry</fullName>
            </value>
            <value>
                <fullName>Stage 1 Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>