force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop</label>
    <type>Checkbox</type>
</CustomField>