force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/RuleName__c.field-meta.xml
<CustomField>
    <fullName>RuleName__c</fullName>
    <label>RuleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>