force-app/main/default/objects/SPEN_OutboundDiallerConfig__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSR</fullName>
                <default>true</default>
                <label>PSR</label>
            </value>
            <value>
                <fullName>Other PSR</fullName>
            </value>
            <value>
                <fullName>Non PSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>